# Claude-Code-Top

./: Cargo.toml  README.md  claude-code-monitor-spec.md  install.sh  update.sh
src/: app.rs  config.rs  event.rs  main.rs  paths.rs
src/data/: jsonl.rs  mod.rs  pricing.rs  session.rs  thread.rs  types.rs  usage.rs
src/ui/: confirm.rs  details.rs  header.rs  layout.rs  mod.rs  sessions.rs  sparkline.rs  theme.rs  threads.rs
