[package]
name = "cctop"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "htop-style Claude Code session monitor"
authors = ["Seongho Kim <seongho-kim@yonsei.ac.kr>"]
repository = "https://github.com/seongho-git/cctop"

[[bin]]
name = "cctop"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
hostname = "0.4"
sysinfo = "0.33.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
